force-app/main/default/objects/Bank__c/fields/Closing_Balance__c.field-meta.xml
<CustomField>
    <fullName>Closing_Balance__c</fullName>
    <formula>Opening_Balance__c  +  Deposit__c  -  Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>