force-app/main/default/objects/Bank__c/fields/Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Date__c</fullName>
    <formula>date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Date</label>
    <type>Date</type>
</CustomField>