force-app/main/default/objects/Bank__c/validationRules/opening_balance.validationRule-meta.xml
<ValidationRule>
    <fullName>opening_balance</fullName>
    <active>false</active>
    <errorConditionFormula>IF( Sales_Date__c =  TODAY() + 1 ,False,True)  &amp;&amp; (
  Opening_Balance__c  =  Closing_Balance__c )</errorConditionFormula>
    <errorMessage>show error</errorMessage>
</ValidationRule>